--- a/style.css
+++ b/style.css
@@ -55,23 +55,20 @@ h1 {
 h3 {
 
     color: #FF8484;
-  display: grid;
-  justify-content: center;
+text-align:center;
 }
 
 h4 {
     
     Color: #CF8DFB;
-  display: grid;
-  justify-content: center;
+text-align:center;
 }
 
 p {
     Color: #a4b1cd;
 
       margin: 35px;
-  display: grid;
-  justify-content: center;
+text-align:center;
 }
 
 
